--- a/templates/_base.html
+++ b/templates/_base.html
@@ -5,16 +5,41 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Library{% endblock title%}</title>
+    <!-- OWN CSS -->
     <link rel="stylesheet" href="{% static 'css/styles.css' %}"/>
+    <!-- BT CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- Favicon -->
+    <link rel="stylesheet" href="{% static 'images/favicon_io/favicon.ico' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/favicon_io/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon_io/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon_io/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'images/favicon_io/site.webmanifest' %}">
+
 </head>
 <body>
-{% include '_navbar.html' %}
+<div class="container-fluid">
+    {% include '_navbar.html' %}
 
-{% block content %}
-{% endblock content %}
+    <div class="row">
+        <div class="col-sm-2">
+            {% block sidebar %}
+            <ul class="sidebar-nav">
+                <li><a href="{% url 'catalogue:index' %}">Home</a></li>
+                <li><a href="{% url 'catalogue:books' %}">All books</a></li>
+                <li><a href="#">All authors</a></li>
+            </ul>
+            {% endblock sidebar %}
+        </div>
+        <div class="col-sm-10 ">
+            {% block content %}{% endblock content %}
+        </div>
+    </div>
 
+</div>
+
+<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
