--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="{% url 'catalogue:index' %}"><img
+                src="/static/images/favicon_io/favicon.ico" alt="logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -34,10 +35,4 @@
             </form>
         </div>
     </div>
-</nav>
-
-<nav class="nav flex-column">
-    <a class="nav-link" href="#">All Authors</a>
-    <a class="nav-link" href="#">All Books</a>
-    <a class="nav-link" href="#">Disabled</a>
 </nav>
