--- a/templates/catalogue/book_list.html
+++ b/templates/catalogue/book_list.html
@@ -9,7 +9,7 @@ Books
 
 {% for book in book_list %}
 <ul>
-    <li><a href="#">{{ book.title }}</a>
+    <li><a href="{{ book.get_absolute_url }}">{{ book.title }}</a>
         ({{ book.author }})
     </li>
 </ul>
