added all-authors and author-detail functionality

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -28,7 +28,7 @@
             <ul class="sidebar-nav">
                 <li><a href="{% url 'catalogue:index' %}">Home</a></li>
                 <li><a href="{% url 'catalogue:books' %}">All books</a></li>
-                <li><a href="#">All authors</a></li>
+                <li><a href="{% url 'catalogue:authors' %}">All authors</a></li>
             </ul>
             {% endblock sidebar %}
         </div>
