--- a/templates/catalogue/book_detail.html
+++ b/templates/catalogue/book_detail.html
@@ -6,7 +6,7 @@ Book-Detail
 
 {% block content %}
 <h1>Title: {{ book.title }}</h1>
-<p><strong>Author: </strong><a href="#">{{ book.author }}</a></p>
+<p><strong>Author: </strong><a href="{{ book.author.get_absolute_url }}">{{ book.author }}</a></p>
 <p><strong>Summary: </strong>{{ book.summary }}</p>
 <p><strong>ISBN: </strong>{{ book.isbn }}</p>
 <p><strong>Languague: </strong>{{ book.language }}</p>
