setup login and logout thru django-own-forms

--- a/templates/catalogue/author_list.html
+++ b/templates/catalogue/author_list.html
@@ -13,8 +13,8 @@ Authors
     <ul>
         <li><a href="{{ author.get_absolute_url }}">{{ author }}</a>
             ({{ author.date_of_birth }} -
-                {% if author.date_of_death %}{
-                    { author.date_of_death }}
+                {% if author.date_of_death %}
+                    {{ author.date_of_death }}
                 {% endif %})
         </li>
     </ul>
