--- a/templates/catalogue/book_detail.html
+++ b/templates/catalogue/book_detail.html
@@ -17,7 +17,7 @@ Book-Detail
     {% endif %}
     {% endfor %}
 </p>
-<div style="margin-left:20px;margin-top:20px">
+<div class="mx-20 mt-20">
     <h4>Copies</h4>
 
     {% for copy in book.instance.all %}
